--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ SECRET_KEY=your_super_secret_key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 SQLALCHEMY_DATABASE_URL=sqlite:///./booking.db
-CORS_ORIGINS=["http://localhost:3000"]
+CORS_ORIGINS=["http://localhost:3000", "http://localhost:3002"]
