--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-image-crop": "^11.0.10",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "@react-google-maps/api": "^2.19.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
