--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 .DS_Store
 *.db
 backend/static/static/
+# Ignore Python cache
+__pycache__/
+*.py[cod]
+
+# Ignore Node modules
+node_modules/
+
+# Log files
+*.log
+
+# Env files
+.env
