--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,17 +12,17 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
+    "@react-google-maps/api": "^2.19.1",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
-    "next": "14.0.3",
+    "next": "^14.2.29",
     "react": "^18.2.0",
     "react-calendar": "^6.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-image-crop": "^11.0.10",
-    "yup": "^1.3.2",
-    "@react-google-maps/api": "^2.19.1"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -34,6 +34,8 @@
     "eslint-config-next": "14.0.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0"
   }
 }
