--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "pretest": "node scripts/ensureDeps.js",
     "test": "jest"
   },
   "dependencies": {
