--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,6 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pretest": "node scripts/ensureDeps.js",
     "test": "jest"
   },
   "dependencies": {
@@ -43,6 +42,10 @@
     "typescript": "^5.3.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "@types/jest": "^29.5.0"
+    "@types/jest": "^29.5.0",
+    "babel-jest": "^29.7.0",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3"
   }
 }
