--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@react-google-maps/api": "^2.19.1",
     "axios": "^1.6.2",
+    "clsx": "^2.1.0",
     "date-fns": "^2.30.0",
     "next": "^14.2.29",
     "react": "^18.2.0",
@@ -24,11 +25,15 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-image-crop": "^11.0.10",
-    "clsx": "^2.1.0",
+    "react-swipeable-list": "^1.10.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@eslint/eslintrc": "^3.3.1",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
     "@types/react-calendar": "^4.1.0",
@@ -36,18 +41,14 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.16",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.54.0",
     "eslint-config-next": "14.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.3.2",
-    "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "@types/jest": "^29.5.0",
-    "babel-jest": "^29.7.0",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
-    "jest-environment-jsdom": "^29.7.0"
+    "typescript": "^5.3.2"
   }
 }
