--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "identity-obj-proxy": "^3.0.0"
   }
 }
