--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "react-hot-toast": "^2.4.1",
     "react-image-crop": "^11.0.10",
     "react-swipeable-list": "^1.10.0",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "framer-motion": "^12.16.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
