--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "pretest": "npm install",
-    "test": "jest"
+    "test": "jest",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -18,6 +19,7 @@
     "axios": "^1.6.2",
     "clsx": "^2.1.0",
     "date-fns": "^2.30.0",
+    "framer-motion": "^12.16.0",
     "next": "^14.2.29",
     "react": "^18.2.0",
     "react-calendar": "^6.0.0",
@@ -26,14 +28,14 @@
     "react-hot-toast": "^2.4.1",
     "react-image-crop": "^11.0.10",
     "react-swipeable-list": "^1.10.0",
-    "yup": "^1.3.2",
-    "framer-motion": "^12.16.0"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@eslint/eslintrc": "^3.3.1",
+    "@playwright/test": "^1.52.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
@@ -45,12 +47,12 @@
     "babel-jest": "^29.7.0",
     "eslint": "^8.54.0",
     "eslint-config-next": "14.0.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.3.2",
-    "identity-obj-proxy": "^3.0.0"
+    "typescript": "^5.3.2"
   }
 }
