--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "pretest": "test -d node_modules || npm install",
-    "test": "jest",
-    "test:e2e": "playwright test"
+    "test": "jest"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -35,7 +34,6 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@eslint/eslintrc": "^3.3.1",
-    "@playwright/test": "^1.52.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
