--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_URL=http://192.168.3.203:8000
 NEXT_PUBLIC_WS_URL=ws://192.168.3.203:8000
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
