--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@eslint/eslintrc": "^3.3.1",
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
