--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
     "@react-google-maps/api": "^2.19.1",
+    "@googlemaps/places": "^2.0.1",
     "axios": "^1.6.2",
     "clsx": "^2.1.0",
     "date-fns": "^2.30.0",
