--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-hot-toast": "^2.4.1",
     "react-image-crop": "^11.0.10",
     "react-swipeable-list": "^1.10.0",
+    "react-window": "^1.8.7",
     "yup": "^1.3.2"
   },
   "devDependencies": {
