--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 SQLALCHEMY_DATABASE_URL=sqlite:///./booking.db
 CORS_ORIGINS=["http://localhost:3000", "http://localhost:3002", "http://192.168.3.203:3000"]
+CORS_ALLOW_ALL=false
