--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,3 +16,5 @@ fakeredis==2.23.2
 email-validator==2.2.0
 twilio==9.6.2
 pyotp==2.9.0
+google-auth-oauthlib==1.2.0
+google-api-python-client==2.127.0
