--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=http://localhost:8000/api/v1/google-calendar/callback
 FRONTEND_URL=http://localhost:3000
+DEFAULT_CURRENCY=ZAR
