--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,12 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=http://localhost:8000/api/v1/google-calendar/callback
 FRONTEND_URL=http://localhost:3000
 DEFAULT_CURRENCY=ZAR
+GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+SMTP_HOST=localhost
+SMTP_PORT=25
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_FROM=no-reply@localhost
