--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ SMTP_PORT=25
 SMTP_USERNAME=
 SMTP_PASSWORD=
 SMTP_FROM=no-reply@localhost
+
+# Login rate limiting
+MAX_LOGIN_ATTEMPTS=5
+LOGIN_ATTEMPT_WINDOW=300
