--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,4 @@ SMTP_FROM=no-reply@localhost
 # Login rate limiting
 MAX_LOGIN_ATTEMPTS=5
 LOGIN_ATTEMPT_WINDOW=300
+PAYMENT_GATEWAY_URL=https://example.com
